Notebooks have been organized to follow the story line of the paper. In most cases, a brief introduction is included at the beginning of the notebook to summarize what the notebook is doing. Notebooks are: 1 - raw data preprocessing 2 - gene reproducibility 3 - plots for heatmaps, hox genes, germ layers, and comparison between human gastruloid systems (two notebooks in this step) 4 - comparison bewteen mouse and human gastruloids and GO terms analysis (GO terms is performed using a script, not a notebook)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 __pycache__
 .DS_Store
 .ipynb_checkpoints/
+2_HeatmapOnSimilarities.ipynb
+3_comparisonMouseHuman-posReview_Jan19.ipynb
+3_comparisonMouseHuman-v2.ipynb
+3_comparisonMouseHuman.ipynb
+4_comparisonCarnagie.ipynb
+6_reporters.ipynb
+normalize_cluster_analysis.ipynb
+
